fix : user Domain ( update, delete)
